fixed font color in dark mode

--- a/css/Homedark.css
+++ b/css/Homedark.css
@@ -120,14 +120,14 @@
   }
   .text1{
     text-align: center;
-    color:#799dab;
+    color:#C7EAF8;
     text-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
     font-size: 5rem;
   }
   
   .text2{
     text-align: center;
-    color:#799dab;
+    color:#C7EAF8;
     font-size: 3rem;
   }
   
